[gd_scene load_steps=4 format=3 uid="uid://23km1kfv27um"]

[ext_resource type="Script" uid="uid://dte0v0tdlgrp6" path="res://scripts/start_page.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://b0kv3mlkqmckt" path="res://textures/UISprites/8-bit-hud.ttf" id="2_ftwj8"]
[ext_resource type="Texture2D" uid="uid://cqmv5dlwv26kq" path="res://textures/UISprites/startScreen.png" id="2_nditi"]

[node name="StartPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -32.0
offset_right = 2998.0
offset_bottom = 1600.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_nditi")

[node name="OnePlayerButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
offset_left = 7.00001
offset_top = 3.0
offset_right = 194.0
offset_bottom = 56.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("2_ftwj8")
theme_override_font_sizes/font_size = 16
text = "1 ð–¨†"

[node name="TwoPlayersButton" type="Button" parent="."]
layout_mode = 2
offset_left = 90.0
offset_top = 4.0
offset_right = 265.0
offset_bottom = 57.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("2_ftwj8")
theme_override_font_sizes/font_size = 16
text = "2 ð–¨†
"

[node name="TutorialButton" type="Button" parent="."]
layout_mode = 2
offset_left = 168.0
offset_top = 4.00002
offset_right = 327.0
offset_bottom = 57.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("2_ftwj8")
theme_override_font_sizes/font_size = 16
text = "???"
